--- a/index.html
+++ b/index.html
@@ -68,12 +68,16 @@
                 </div>
             </div>
             <div class="workcation">
-                <p>워케이션 소개</p>
-                <img alt="sea_office" src="image/sea_office.png">
+	        <a href="https://www.busaness.com/">
+	            <p>워케이션 소개</p>
+	            <img alt="sea_office" src="${path}/resources/image/sea_office.png">
+	        </a>
             </div>
             <div class="workcation">
-                <p>워케이션?</p>
-                <img alt="sea_office" src="image/sea_office2.png">
+            	<a href="https://www.busaness.com/#accommodation">
+	            <p>워케이션 스테이</p>
+                    <img alt="sea_office" src="${path}/resources/image/sea_office2.png">
+	        </a>
             </div>
         </section>
     </div>
