--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             <div class="workcation">
 	        <a href="https://www.busaness.com/">
 	            <p>워케이션 소개</p>
-	            <img alt="sea_office" src="${path}/resources/image/sea_office.png">
+	            <img alt="sea_office" src="image/sea_office.png">
 	        </a>
             </div>
             <div class="workcation">
             	<a href="https://www.busaness.com/#accommodation">
 	            <p>워케이션 스테이</p>
-                    <img alt="sea_office" src="${path}/resources/image/sea_office2.png">
+                    <img alt="sea_office" src="image/sea_office2.png">
 	        </a>
             </div>
         </section>
