--- a/index.html
+++ b/index.html
@@ -39,40 +39,44 @@
         
         <section class="content">
             <div class="indicator">
-                <p><h2>수영(서핑, 낚시 등) 지수</h2></p>
+                <div class="indicator_title">
+	            <p><h2>수영(서핑, 낚시 등) 지수</h2></p>
+	        </div>
+	        <div class="indicator_flex">
+	            <div>
+	                <div class="index morning">오전</div>
+	                <img alt="surf_good" src="${path}/resources/image/surf_good.png">
+	                <div class="index morning">매우 좋음</div>
+	            </div>
+	            <div>
+	               	<div class="index afternoon">오후</div>
+	               	<img alt="surf_good" src="${path}/resources/image/surf_good.png">
+	               	<div class="index afternoon">매우 좋음</div>
+	            </div>
+	            <div class="indicator_flex_inner">
+	                <div class="indicator_forecast_flex">
+	                    <div class="forecast_text">내일:<p>매우 좋음</p></div>
+	                    <img alt="surf_good" src="${path}/resources/image/surf_good.png">
+	                </div>
+	                <div class="indicator_forecast_flex">
+	                    <div class="forecast_text">모레:<p>좋음</p></div>
+	                    <img alt="surf_good" src="${path}/resources/image/surfboard.png">
+	                </div>
+	                <div class="indicator_forecast_flex">
+	                    <div class="forecast_text">글피:<p>나쁨</p></div>
+	                    <img alt="surf_good" src="${path}/resources/image/no_surf.png">
+	                </div>
+	            </div>
+	        </div>
             </div>
-            <div class="indicator_flex">
-            	<div>
-            	    <div class="index morning">오전</div>
-            	    <img alt="surf_good" src="image/surf_good.png">
-            	    <div class="index morning">매우 좋음</div>
-            	</div>
-                <div>
-                	<div class="index afternoon">오후</div>
-                	<img alt="surf_good" src="image/surf_good.png">
-                	<div class="index afternoon">매우 좋음</div>
-                </div>
-                <div class="indicator_flex_inner">
-                	<div class="indicator_forecast_flex">
-                		<div class="forecast_text">내일:<p>매우 좋음</p></div>
-                		<img alt="surf_good" src="image/surf_good.png">
-                	</div>
-                	<div class="indicator_forecast_flex">
-                		<div class="forecast_text">모레:<p>좋음</p></div>
-                		<img alt="surf_good" src="image/surfboard.png">
-                	</div>
-                	<div class="indicator_forecast_flex">
-                		<div class="forecast_text">글피:<p>나쁨</p></div>
-                		<img alt="surf_good" src="image/no_surf.png">
-                	</div>
-                </div>
-            </div>
+		
             <div class="workcation">
 	        <a href="https://www.busaness.com/">
 	            <p>워케이션 소개</p>
 	            <img alt="sea_office" src="image/sea_office.png">
 	        </a>
             </div>
+		
             <div class="workcation">
             	<a href="https://www.busaness.com/#accommodation">
 	            <p>워케이션 스테이</p>
