하이퍼링크 & 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 		
             <div class="workcation">
 	        <a href="https://www.busaness.com/">
-	            <p>워케이션 소개</p>
+	            <p class="evt">워케이션 숙박비 지원!</p>
 	            <img alt="sea_office" src="image/sea_office.png">
 	        </a>
             </div>
 		
             <div class="workcation">
-            	<a href="https://www.busaness.com/#accommodation">
-	            <p>워케이션 스테이</p>
-                    <img alt="sea_office" src="image/sea_office2.png">
+            	<a href="https://www.dxchallenge.co.kr/dataweek2024">
+	            <p class="evt">Hot 한 이벤트</p>
+                    <img alt="sea_office" src="${path}/resources/image/evt01.png">
 	        </a>
             </div>
         </section>
