이미지경로 수정

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="workcation">
             	<a href="https://www.dxchallenge.co.kr/dataweek2024">
 	            <p class="evt">Hot 한 이벤트</p>
-                    <img alt="sea_office" src="${path}/resources/image/evt01.png">
+                    <img alt="sea_office" src="image/evt01.png">
 	        </a>
             </div>
         </section>
